--- a/src/modules/non-responsive/color.scss
+++ b/src/modules/non-responsive/color.scss
@@ -1,7 +1,8 @@
+@use '../../functions';
 @use '../../variables';
 
 @each $color, $value in variables.$colors {
-  .#{variables.$global-prefix}#{$color} {
+  #{functions.construct-class-name(variables.$global-prefix, $color)} {
     color: $value;
   }
 }
