--- a/src/modules/responsive/_float.scss
+++ b/src/modules/responsive/_float.scss
@@ -1,15 +1,16 @@
+@use '../../functions';
 @use '../../variables';
 
+$floats: (
+  l: left,
+  r: right,
+  n: none
+);
+
 @mixin float($media-suffix) {
-  .#{variables.$global-prefix}fl#{$media-suffix} {
-    float: left;
-  }
-
-  .#{variables.$global-prefix}fr#{$media-suffix} {
-    float: right;
-  }
-
-  .#{variables.$global-prefix}fn#{$media-suffix} {
-    float: none;
+  @each $name, $value in $floats {
+    #{functions.construct-class-name(variables.$global-prefix, f + $name, $media-suffix)} {
+      float: $value;
+    }
   }
 }
