--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -33,11 +33,11 @@ $spacer-levels: (
  */
 
 $coordinate-spacer-levels: (
-  '-0':   0,
-  '-1':   1rem,
-  '-2':   2rem,
-  '-50':  50%,
-  '-100': 100%
+  '0':   0,
+  '1':   1rem,
+  '2':   2rem,
+  '50':  50%,
+  '100': 100%
 ) !default;
 
 /*
@@ -77,11 +77,11 @@ $sizer-levels: (
  */
 
 $translate-levels: (
-  '-0':    0,
-  '-100':  100%,
-  '-n100': -100%,
-  '-50':   50%,
-  '-n50':  -50%
+  '0':    0,
+  '100':  100%,
+  'n100': -100%,
+  '50':   50%,
+  'n50':  -50%
 ) !default;
 
 /*
@@ -89,9 +89,9 @@ $translate-levels: (
  */
 
 $transition-speeds: (
-  '-slow':   .5s,
-  '-medium': .25s,
-  '-fast':   .15s
+  'slow':   .5s,
+  'medium': .25s,
+  'fast':   .15s
 ) !default;
 
 /*
@@ -226,8 +226,19 @@ $font-size-h3:          $font-size-base * pow($font-scaling-factor, 3) !default;
 $font-size-h4:          $font-size-base * pow($font-scaling-factor, 2) !default;
 $font-size-h5:          $font-size-base * pow($font-scaling-factor, 1) !default;
 $font-size-h6:          $font-size-base;
-// stylelint-disable-next-line max-line-length
 $font-size-small:       $font-size-base * pow($font-scaling-factor, -1) !default;
+
+$font-sizes: (
+  f-headline:    $font-size-headline,
+  f-subheadline: $font-size-subheadline,
+  f1:            $font-size-h1,
+  f2:            $font-size-h2,
+  f3:            $font-size-h3,
+  f4:            $font-size-h4,
+  f5:            $font-size-h5,
+  f6:            $font-size-h6,
+  small:         $font-size-small
+);
 
 /*
    LINE HEIGHTS
@@ -245,44 +256,46 @@ $line-height-levels: (
  */
 
 $font-weight-levels: (
-  '-100':     100,
-  '-200':     200,
-  '-300':     300,
-  '-normal':  400, // font-weight 400 is normal
-  '-500':     500,
-  '-600':     600,
-  '-bold':    700, // font-weight 700 is bold
-  '-800':     800,
-  '-900':     900,
-  '-lighter': lighter,
-  '-bolder':  bolder
+  'fw-100':     100,
+  'fw-200':     200,
+  'fw-300':     300,
+  'fw-normal':  400, // font-weight 400 is normal
+  'fw-500':     500,
+  'fw-600':     600,
+  'fw-bold':    700, // font-weight 700 is bold
+  'b':          700, // Add extra class for font-weight bold for brevity
+  'fw-800':     800,
+  'fw-900':     900,
+  'fw-lighter': lighter,
+  'fw-bolder':  bolder
 ) !default;
 
 /*
    OPACITY LEVELS
  */
 
+$opacity-name: o !default;
+
 $opacity-levels: (
-  '-100':  1,
-  '-90':   .9,
-  '-80':   .8,
-  '-70':   .7,
-  '-60':   .6,
-  '-50':   .5,
-  '-40':   .4,
-  '-30':   .3,
-  '-20':   .2,
-  '-10':   .1,
-  '-05':   .05,
-  '-025':  .025,
-  '-0':    0
+  '100': 1,
+  '90':  .9,
+  '80':  .8,
+  '70':  .7,
+  '60':  .6,
+  '50':  .5,
+  '40':  .4,
+  '30':  .3,
+  '20':  .2,
+  '10':  .1,
+  '05':  .05,
+  '025': .025,
+  '0':   0
 ) !default;
 
 /*
    BORDER STYLES
  */
 
-// stylelint-disable-next-line max-line-length
 $border-styles: [ solid, dotted, dashed, double, groove, ridge, inset, outset ] !default;
 
 /*
