--- a/src/modules/non-responsive/border-color.scss
+++ b/src/modules/non-responsive/border-color.scss
@@ -1,5 +1,8 @@
+@use '../../functions';
 @use '../../variables';
 
 @each $color, $value in variables.$colors {
-  .#{variables.$global-prefix}b--#{$color} { border-color: $value; }
+  #{functions.construct-class-name(variables.$global-prefix, b-- + $color)} {
+    border-color: $value;
+  }
 }
