--- a/src/modules/non-responsive/border.scss
+++ b/src/modules/non-responsive/border.scss
@@ -1,31 +1,32 @@
+@use '../../functions';
 @use '../../variables';
 
-.#{variables.$global-prefix}ba {
+#{functions.construct-class-name(variables.$global-prefix, ba)} {
   border-style: solid;
   border-width: 1px;
 }
 
-.#{variables.$global-prefix}bt {
+#{functions.construct-class-name(variables.$global-prefix, bt)} {
   border-top-style: solid;
   border-top-width: 1px;
 }
 
-.#{variables.$global-prefix}br {
+#{functions.construct-class-name(variables.$global-prefix, br)} {
   border-right-style: solid;
   border-right-width: 1px;
 }
 
-.#{variables.$global-prefix}bb {
+#{functions.construct-class-name(variables.$global-prefix, bb)} {
   border-bottom-style: solid;
   border-bottom-width: 1px;
 }
 
-.#{variables.$global-prefix}bl {
+#{functions.construct-class-name(variables.$global-prefix, bl)} {
   border-left-style: solid;
   border-left-width: 1px;
 }
 
-.#{variables.$global-prefix}bn {
+#{functions.construct-class-name(variables.$global-prefix, bn)} {
   border-style: none;
   border-width: 0;
 }
