--- a/src/modules/non-responsive/cursor.scss
+++ b/src/modules/non-responsive/cursor.scss
@@ -1,8 +1,10 @@
+@use '../../functions';
 @use '../../variables';
 
-.#{variables.$global-prefix}cursor-pointer     { cursor: pointer; }
-.#{variables.$global-prefix}cursor-text        { cursor: text; }
-.#{variables.$global-prefix}cursor-none        { cursor: none; }
-.#{variables.$global-prefix}cursor-not-allowed { cursor: not-allowed; }
-.#{variables.$global-prefix}cursor-progress    { cursor: progress; }
-.#{variables.$global-prefix}cursor-wait        { cursor: wait; }
+$cursors: pointer, text, none, not-allowed, progress, wait;
+
+@each $cursor in $cursors {
+  #{functions.construct-class-name(variables.$global-prefix, cursor, $cursor)} {
+    cursor: $cursor;
+  }
+}
