--- a/src/modules/non-responsive/debug.scss
+++ b/src/modules/non-responsive/debug.scss
@@ -1,3 +1,4 @@
+@use '../../functions';
 @use '../../variables';
 @use 'sass:map';
 
@@ -13,19 +14,20 @@ $dataUrlGrid8Solid: 'data:image/gif;base64,R0lGODdhCAAIAPEAAADw/wDx/////wAAACwAA
 $dataUrlGrid16Solid: 'data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywAAAAAEAAQAAACIZyPKckYDQFsb6ZqD85jZ2+BkwiRFKehhqQCQgDHcgwEBQA7';
 /* stylelint-enable max-line-length */
 
-.#{variables.$global-prefix}debug-grid {
+// TODO: rename debug-grid-8
+#{functions.construct-class-name(variables.$global-prefix, debug-grid)} {
   background: transparent url($dataUrlGrid8) repeat top left;
 }
 
-.#{variables.$global-prefix}debug-grid-16 {
+#{functions.construct-class-name(variables.$global-prefix, debug-grid-16)} {
   background: transparent url($dataUrlGrid16) repeat top left;
 }
 
-.#{variables.$global-prefix}debug-grid-8-solid {
+#{functions.construct-class-name(variables.$global-prefix, debug-grid-8-solid)} {
   background: white url($dataUrlGrid8Solid) repeat top left;
 }
 
-.#{variables.$global-prefix}debug-grid-16-solid {
+#{functions.construct-class-name(variables.$global-prefix, debug-grid-16-solid)} {
   background: white url($dataUrlGrid16Solid) repeat top left;
 }
 
@@ -34,7 +36,7 @@ $dataUrlGrid16Solid: 'data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywA
  * See https://css-tricks.com/stripes-css/
  */
 
-.#{variables.$global-prefix}debug-striped {
+#{functions.construct-class-name(variables.$global-prefix, debug-striped)} {
   background:
     repeating-linear-gradient(
       -45deg,
@@ -45,7 +47,7 @@ $dataUrlGrid16Solid: 'data:image/gif;base64,R0lGODdhEAAQAPEAAADw/wDx/xXy/////ywA
     );
 }
 
-.#{variables.$global-prefix}debug-striped-light {
+#{functions.construct-class-name(variables.$global-prefix, debug-striped-light)} {
   background:
     repeating-linear-gradient(
       -45deg,
