--- a/src/modules/non-responsive/hover-background-color.scss
+++ b/src/modules/non-responsive/hover-background-color.scss
@@ -1,7 +1,8 @@
+@use '../../functions';
 @use '../../variables';
 
 @each $color, $value in variables.$colors {
-  .#{variables.$global-prefix}hover-bg-#{$color}:hover {
+  #{functions.construct-class-name(variables.$global-prefix, hover-bg, $color)}:hover {
     background-color: $value;
   }
 }
