--- a/src/modules/non-responsive/miscellaneous.scss
+++ b/src/modules/non-responsive/miscellaneous.scss
@@ -1,13 +1,14 @@
+@use '../../functions';
 @use '../../variables';
 
-.#{variables.$global-prefix}list-reset {
+#{functions.construct-class-name(variables.$global-prefix, list-reset)} {
   list-style: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.#{variables.$global-prefix}stretch {
+#{functions.construct-class-name(variables.$global-prefix, stretch)} {
   position: absolute;
   top: 0;
   left: 0;
@@ -15,7 +16,7 @@
   right: 0;
 }
 
-.#{variables.$global-prefix}stretch-pseudo::after {
+#{functions.construct-class-name(variables.$global-prefix, stretch-pseudo)}::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -26,6 +27,6 @@
   background-color: transparent;
 }
 
-.#{variables.$global-prefix}link {
+#{functions.construct-class-name(variables.$global-prefix, link)} {
   text-decoration: none;
 }
