--- a/src/modules/responsive/_display.scss
+++ b/src/modules/responsive/_display.scss
@@ -1,39 +1,22 @@
+@use '../../functions';
 @use '../../variables';
 
+$displays: (
+  b: block,
+  i: inline,
+  ib: inline-block,
+  n: none,
+  t: table,
+  tc: table-cell,
+  f: flex,
+  if: inline-flex,
+  g: grid
+);
+
 @mixin display($media-suffix) {
-  .#{variables.$global-prefix}db#{$media-suffix} {
-    display: block;
-  }
-
-  .#{variables.$global-prefix}di#{$media-suffix} {
-    display: inline;
-  }
-
-  .#{variables.$global-prefix}dib#{$media-suffix} {
-    display: inline-block;
-  }
-
-  .#{variables.$global-prefix}dn#{$media-suffix} {
-    display: none;
-  }
-
-  .#{variables.$global-prefix}dt#{$media-suffix} {
-    display: table;
-  }
-
-  .#{variables.$global-prefix}dtc#{$media-suffix} {
-    display: table-cell;
-  }
-
-  .#{variables.$global-prefix}df#{$media-suffix} {
-    display: flex;
-  }
-
-  .#{variables.$global-prefix}dif#{$media-suffix} {
-    display: inline-flex;
-  }
-
-  .#{variables.$global-prefix}dg#{$media-suffix} {
-    display: grid;
+  @each $name, $value in $displays {
+    #{functions.construct-class-name(variables.$global-prefix, d + $name, $media-suffix)} {
+      display: $value;
+    }
   }
 }
