--- a/src/modules/responsive/_flex-direction.scss
+++ b/src/modules/responsive/_flex-direction.scss
@@ -1,19 +1,12 @@
+@use '../../functions';
 @use '../../variables';
 
+$flex-directions: column, row, column-reverse, row-reverse;
+
 @mixin flex-direction($media-suffix) {
-  .#{variables.$global-prefix}flex-column#{$media-suffix} {
-    flex-direction: column;
-  }
-
-  .#{variables.$global-prefix}flex-row#{$media-suffix} {
-    flex-direction: row;
-  }
-
-  .#{variables.$global-prefix}flex-column-reverse#{$media-suffix} {
-    flex-direction: column-reverse;
-  }
-
-  .#{variables.$global-prefix}flex-row-reverse#{$media-suffix} {
-    flex-direction: row-reverse;
+  @each $direction in $flex-directions {
+    #{functions.construct-class-name(variables.$global-prefix, flex, $direction, $media-suffix)} {
+      flex-direction: $direction;
+    }
   }
 }
