--- a/src/modules/responsive/_height.scss
+++ b/src/modules/responsive/_height.scss
@@ -1,8 +1,9 @@
+@use '../../functions';
 @use '../../variables';
 
 @mixin height($media-suffix) {
   @each $level, $value in variables.$sizer-levels {
-    .#{variables.$global-prefix}h#{$level}#{$media-suffix} {
+    #{functions.construct-class-name(variables.$global-prefix, h + $level, $media-suffix)} {
       height: $value;
     }
   }
