--- a/src/modules/responsive/_padding.scss
+++ b/src/modules/responsive/_padding.scss
@@ -1,38 +1,20 @@
+@use '../../functions';
 @use '../../variables';
 
+$paddings: (
+  p:  padding,
+  pt: padding-top,
+  pr: padding-right,
+  pb: padding-bottom,
+  pl: padding-left
+);
+
 @mixin padding($media-suffix) {
-  // Padding all
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}p#{$level}#{$media-suffix} {
-      padding: $value;
-    }
-  }
-
-  // Padding top
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}pt#{$level}#{$media-suffix} {
-      padding-top: $value;
-    }
-  }
-
-  // Padding right
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}pr#{$level}#{$media-suffix} {
-      padding-right: $value;
-    }
-  }
-
-  // Padding bottom
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}pb#{$level}#{$media-suffix} {
-      padding-bottom: $value;
-    }
-  }
-
-  // Padding left
-  @each $level, $value in variables.$spacer-levels {
-    .#{variables.$global-prefix}pl#{$level}#{$media-suffix} {
-      padding-left: $value;
+  @each $name, $property in $paddings {
+    @each $level, $value in variables.$spacer-levels {
+      #{functions.construct-class-name(variables.$global-prefix, $name + $level, $media-suffix)} {
+        #{$property}: $value;
+      }
     }
   }
 
